update with CustomerDTO and add idUserConfig